        font-weight:bold;
        margin-top:1em;
        margin-bottom:0.5em;
        text-align:center }
      div.subtitle {
        color:#C0F0C0;
        font-size:0.8em;
        margin-bottom:1em;
        text-align:center }
      div.freetext { color:#F0F0F0 }
      div.list     { color:#C0C0F0 }
    </style>
  </head>
  <body>
    $ 1.3.13
      % Version 1.3.13
      _ 07/21/2017
      * Added Engrams: Tek Trough
      * Added Resources: Allosaurus Brain, Basilosaurus Blubber, and more!
      * Updated Engrams: All Boss Portals now updated with new compositions and details.
      ! Apologies for the delay, I'm currently working on a brand new and improved app! One that will be available through the web and all other devices. Will also include some new and amazing features!

    $ 1.3.12
      % Version 1.3.12
      _ 06/22/2017
      * Added new Tapejara Tek Saddle!
      * Updated all Engrams with new level requirements (finally, eh?)!
      * Fixed a bug (hopefully!) where Engram Detail screen would cause a crash.
      * Coming soon: Translations, experience, engram points, and more!
      ! Thanks to all those who alerted me of level requirement changes! I owe you!

    $ 1.3.11
      % Version 1.3.11
      _ 06/11/2017
      * Added new Tutorial feature! (you might see changes to this as it progresses)
      * Added all Engrams up to PC v258.0!
      * Enabled Landscape capabilities again, pretty basic layout tho (for now).
      * Various optimizations (including image sizes, yay!)
      ! As ARK:Survival Evolved progresses, changes are made without notice. Please help me keep app updated by email or selecting Engram Correction in menu, thank you.

    $ 1.3.10
      % Version 1.3.10
      _ 05/13/2017
      * After many requests, you may now Remove Ads through the menu!!
      * Update Engrams: Metal Spike Wall, Poison Grenade (thanks to those who used app to notify me!)